--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto text-center align-items-center">
                         <li class="nav-item">
-                            <a class="" aria-current="page" href="#">Home</a>
+                            <a class="" aria-current="page" href="https://sarlex.netlify.app/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="" href="#">Services</a>
+                            <a class="" href="pages/service.html">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="" href="#">Portfolio</a>
+                            <a class="" href="pages/">Portfolio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="" href="#">Profiles</a>
+                            <a class="" href="pages/">Profiles</a>
                         </li>
                         <li class="nav-item">
-                            <a class="" href="#">About Us</a>
+                            <a class="" href="pages/">About Us</a>
                         </li>
                         <a href="#" class=" desktop-item " style=" font-size: 18px;
                             font-weight: 500;
