--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <a class="" href="pages/">Profiles</a>
                         </li>
                         <li class="nav-item">
-                            <a class="" href="pages/">About Us</a>
+                            <a class="" href="pages/about.html">About Us</a>
                         </li>
                         <a href="#" class=" desktop-item " style=" font-size: 18px;
                             font-weight: 500;
