contact page add

--- a/pages/about.html
+++ b/pages/about.html
@@ -38,7 +38,7 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav ms-auto text-center align-items-center">
                       <li class="nav-item">
-                          <a class="" aria-current="page" href="https://sarlex.netlify.app/">Home</a>
+                          <a class="" aria-current="page" href="/">Home</a>
                       </li>
                       <li class="nav-item">
                           <a class="" href="service.html">Services</a>
