--- a/pages/web-development.html
+++ b/pages/web-development.html
@@ -22,272 +22,55 @@
 
 <body class="">
     <!-- navbar start -->
+        <!-- navbar start -->
 
-    <nav>
-        <div class="wrapper">
-            <div class="logo"><a href="#"> <img src="../image/logo.jpg" class="img-fluid" style="width: 100px;" alt="">
-                </a></div>
-            <input type="radio" name="slider" id="menu-btn">
-            <input type="radio" name="slider" id="close-btn">
-            <ul class="nav-links">
-                <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>
-
-
-                <li>
-                    <a href="#" class="desktop-item">About</a>
-                    <input type="checkbox" id="showMega">
-                    <label for="showMega" class="mobile-item">About</label>
-                    <div class="mega-box">
-                        <div class="content">
-                            <div class="row">
-                                <img src="../image/about us image.jpg" alt="">
-
-                            </div>
-                            <div class="row">
-                                <header> <i class="far fa-address-book"></i> <a href="">Team</a></header>
-                                <p>Ready to go an extra mile to deliver great software solutions.</p>
-
-                            </div>
-                            <div class="row">
-                                <header> <i class="far fa-address-book"></i> <a href="">Careers</a></header>
-                                <p>Ready to go an extra mile to deliver great software solutions.</p>
-
-                            </div>
-
-                            <div class="row">
-                                <header> <i class="far fa-address-book"></i> <a href="testimonials">testimonials</a>
-                                </header>
-                                <p>Ready to go an extra mile to deliver great software solutions.</p>
-
-                            </div>
-
-
-
+        <header class="header-hero">
+            <!-- the nav bar start here -->
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container">
+                    <a class="navbar-brand" href="#">
+                        <div class="logo">
+                            <img src="image/sarlex_fabicon.png" alt="">
                         </div>
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span><img src="image/menu.svg" alt=""></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ms-auto text-center align-items-center">
+                            <li class="nav-item">
+                                <a class="" aria-current="page" href="/">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="" href="service.html">Services</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="" href="portfolio.html">Portfolio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="" href="profiles">Profiles</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="" href="about.html">About Us</a>
+                            </li>
+                            <a href="#" class=" desktop-item " style=" font-size: 18px;
+                            font-weight: 500;
+                            color:#ffffff;
+                            background-color: #ff7a59;
+                            padding: 15px 35px;
+                            border-radius: 10px;">
+                                Contact Us</a>
+                            </li>
+                        </ul>
                     </div>
-                </li>
-                <li>
-                    <a href="../pages/service.html" class="desktop-item">Services</a>
-                    <input type="checkbox" id="showservice">
-                    <label for="showservice" class="mobile-item">Services</label>
-                    <div class="mega-box">
-                        <div class="content">
-                            <!-- <div class="row">
-                                  <img src="../im.jpg" alt="">
-                              </div> -->
-                            <div class="row">
-                                <header> <i class="far fa-address-book"></i> <a href="">Mobile App</a></header>
-                                <ul class="mega-links">
-                                    <li><a href="#"> Graphics</a></li>
-                                    <li><a href="#">Vectors</a></li>
-                                    <li><a href="#">Business cards</a></li>
-                                    <li><a href="#">Custom logo</a></li>
-                                </ul>
-                            </div>
-                            <div class="row">
-
-                                <header> <i class="far fa-address-book"></i> <a href=""> Web Development</a></header>
-                                <ul class="mega-links">
-                                    <li><a href="#">Personal Email</a></li>
-                                    <li><a href="#">Business Email</a></li>
-                                    <li><a href="#">Mobile Email</a></li>
-                                    <li><a href="#">Web Marketing</a></li>
-                                </ul>
-                            </div>
-                            <div class="row">
-
-                                <header> <i class="far fa-address-book"></i> <a href=""> Design</a> </header>
-                                <ul class="mega-links">
-                                    <li><a href="#">Site Seal</a></li>
-                                    <li><a href="#">VPS Hosting</a></li>
-                                    <li><a href="#">Privacy Seal</a></li>
-                                    <li><a href="#">Website design</a></li>
-                                </ul>
-                            </div>
-                            <div class="row">
-
-                                <header> <i class="far fa-address-book"></i> <a href=""> Marketing</a></header>
-                                <ul class="mega-links">
-                                    <li><a href="#">Site Seal</a></li>
-                                    <li><a href="#">VPS Hosting</a></li>
-                                    <li><a href="#">Privacy Seal</a></li>
-                                    <li><a href="#">Website design</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-
-                </li>
-
-                <li>
-                    <a href="#" class="desktop-item">solutions</a>
-                    <input type="checkbox" id="showMega">
-                    <label for="showMega" class="mobile-item">Services</label>
-                    <div class="mega-box">
-                        <div class="content">
-                            <!-- <div class="row">
-                                  <img src="../im.jpg" alt="">
-                              </div> -->
-                            <div class="row">
-                                <header> <i class="far fa-address-book"></i> <a href="">Mobile App</a></header>
-                                <ul class="mega-links">
-                                    <li><a href="#"> Graphics</a></li>
-                                    <li><a href="#">Vectors</a></li>
-                                    <li><a href="#">Business cards</a></li>
-                                    <li><a href="#">Custom logo</a></li>
-                                </ul>
-                            </div>
-                            <div class="row">
-
-                                <header> <i class="far fa-address-book"></i> <a href=""> Web Development</a>
-                                </header>
-                                <ul class="mega-links">
-                                    <li><a href="#">Personal Email</a></li>
-                                    <li><a href="#">Business Email</a></li>
-                                    <li><a href="#">Mobile Email</a></li>
-                                    <li><a href="#">Web Marketing</a></li>
-                                </ul>
-                            </div>
-                            <div class="row">
-
-                                <header> <i class="far fa-address-book"></i> <a href=""> Design</a> </header>
-                                <ul class="mega-links">
-                                    <li><a href="#">Site Seal</a></li>
-                                    <li><a href="#">VPS Hosting</a></li>
-                                    <li><a href="#">Privacy Seal</a></li>
-                                    <li><a href="#">Website design</a></li>
-                                </ul>
-                            </div>
-                            <div class="row">
-
-                                <header> <i class="far fa-address-book"></i> <a href=""> Marketing</a></header>
-                                <ul class="mega-links">
-                                    <li><a href="#">Site Seal</a></li>
-                                    <li><a href="#">VPS Hosting</a></li>
-                                    <li><a href="#">Privacy Seal</a></li>
-                                    <li><a href="#">Website design</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-
-                </li>
-
-                <li>
-                    <a href="#" class="desktop-item">Technology</a>
-                    <input type="checkbox" id="showMega">
-                    <label for="showMega" class="mobile-item">Technology</label>
-                    <div class="mega-box">
-                        <div class="content">
-                            <!-- <div class="row">
-                                  <img src="../im.jpg" alt="">
-                              </div> -->
-                            <div class="row">
-                                <header> <i class="far fa-address-book"></i> <a href="">Mobile </a></header>
-                                <ul class="mega-links">
-                                    <li><a href="#"> Graphics</a></li>
-                                    <li><a href="#">Vectors</a></li>
-                                    <li><a href="#">Business cards</a></li>
-                                    <li><a href="#">Custom logo</a></li>
-                                </ul>
-                            </div>
-                            <div class="row">
-
-                                <header> <i class="far fa-address-book"></i> <a href=""> Backend</a></header>
-                                <ul class="mega-links">
-                                    <li><a href="#">Personal Email</a></li>
-                                    <li><a href="#">Business Email</a></li>
-                                    <li><a href="#">Mobile Email</a></li>
-                                    <li><a href="#">Web Marketing</a></li>
-                                </ul>
-                            </div>
-                            <div class="row">
-
-                                <header> <i class="far fa-address-book"></i> <a href=""> Front End</a> </header>
-                                <ul class="mega-links">
-                                    <li><a href="#">Site Seal</a></li>
-                                    <li><a href="#">VPS Hosting</a></li>
-                                    <li><a href="#">Privacy Seal</a></li>
-                                    <li><a href="#">Website design</a></li>
-                                </ul>
-                            </div>
-                            <div class="row">
-
-                                <header> <i class="far fa-address-book"></i> <a href=""> CMS</a></header>
-                                <ul class="mega-links">
-                                    <li><a href="#">Site Seal</a></li>
-                                    <li><a href="#">VPS Hosting</a></li>
-                                    <li><a href="#">Privacy Seal</a></li>
-                                    <li><a href="#">Website design</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-
-                </li>
+                </div>
+            </nav>
+            <!-- the nav bar end here -->
 
 
-                <li>
-                    <a href="#" class="desktop-item">Portfolio</a>
-                    <input type="checkbox" id="showMega">
-                    <label for="showMega" class="mobile-item">Portfolio</label>
-                    <div class="mega-box">
-                        <div class="content">
-                            <!-- <div class="row">
-                                  <img src="../im.jpg" alt="">
-                              </div> -->
-                            <div class="row">
-                                <img src="../im/1.jpg" alt="">
-                                <header> <i class="far fa-address-book"></i> <a href="">Industry </a></header>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nulla provident,
-                                </p>
-                            </div>
-                            <div class="row">
-                                <img src="../im/4.jpg" alt="">
-                                <header> <i class="far fa-address-book"></i> <a href="">Industry </a></header>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nulla provident,
-                                </p>
-                            </div>
-                            <div class="row">
-                                <img src="../im/3.jpg" alt="">
-                                <header> <i class="far fa-address-book"></i> <a href="">Industry </a></header>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nulla provident,
-                                </p>
-                            </div>
-                            <div class="row">
-                                <img src="../im/2.jpg" alt="">
-                                <header> <i class="far fa-address-book"></i> <a href="">Industry </a></header>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum nulla provident,
-                                </p>
-                            </div>
-
-                        </div>
-                    </div>
-
-                </li>
-
-                <li>
-
-                    <!-- <a href="#" class="desktop-item ">Contact Us</a> -->
-                    <!-- <input type="checkbox" id="showDrop">
-                    <label for="showDrop" class="mobile-item">Dropdown Menu</label>
-                    <ul class="drop-menu">
-                        <li><a href="#">Drop menu 1</a></li>
-                        <li><a href="#">Drop menu 2</a></li>
-                        <li><a href="#">Drop menu 3</a></li>
-                        <li><a href="#">Drop menu 4</a></li>
-                    </ul> -->
-                </li>
-
-                <li><a href="#" class=" desktop-item " style=" font-size: 18px;
-    font-weight: 500;
-    color:#ffffff;
-    background-color: #ff7a59;
-    padding: 15px 35px;">Contact</a></li>
-            </ul>
-            <label for="menu-btn" class="btn menu-btn "><i class="fas fa-bars"></i></label>
-        </div>
-    </nav>
+        </header>
+        <!-- navbar end -->
 
     <!-- navbar end -->
 
