contact page update

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <li class="nav-item">
                             <a class="" href="pages/about.html">About Us</a>
                         </li>
-                        <a href="#" class=" desktop-item " style=" font-size: 18px;
+                        <a href="pages/contact.html" class=" desktop-item " style=" font-size: 18px;
                             font-weight: 500;
                             color:#ffffff;
                             background-color: #ff7a59;
