card and image update

--- a/index.html
+++ b/index.html
@@ -72,10 +72,12 @@
             <div class="row headerContents">
                 <div class="col-md-6">
                     <div class="col">
+                        <h2>Welcome to SarLex Technologies </h2>
                         <h1>Make a better deal <br> with us</h1>
-                        <p>Marketing, sales, and service software that helps your business grow without compromise.
-                            Because “good for the business” should also mean “good for the customer.</p>
-                        <a href="">
+                        <p>We deliver services to global businesses since 2014, with 100% project delivery success. Hire
+                            the best programmers at affordable prices. Our design-focused approach and project execution
+                            processes help you to deliver the right solutions.</p>
+                        <a href="pages/contact.html">
                             <button class="btn common-button mt-3">Lets Talk</button>
                         </a>
                     </div>
@@ -99,10 +101,10 @@
                 a great research. They attend every meeting with our clients and make sure that our developers can do
                 the job.</p>
             <div class="col mt-5">
-                <a href="">
+                <a href="/pages/about.html">
                     <button class="btn common-button mx-5 mb-2">About</button>
                 </a>
-                <a href="">
+                <a href="/pages/contact.html">
                     <button class="btn common-button-outline">Contact</button>
                 </a>
             </div>
@@ -163,9 +165,10 @@
                         <img src="image/services-devops.svg" class="card-img-top" alt="sarlex">
                         <div class="card-body">
                             <h5 class="card-title">Software Development</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in
-                                to
-                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text">You need a UI/ UX designer to enhance your designing idea to your
+                                application developer. An UI/UX design help a web developer or a mobile app developer to
+                                work fast and properly. SarLex Technologies are not providing UI/ UX design service for
+                                next few months.</p>
                             <a href="btn service-btn">GET START</a>
                         </div>
 
@@ -204,9 +207,9 @@
                         <img src="image/hire-dedicated-developer.svg" class="card-img-top" alt="sarlex">
                         <div class="card-body">
                             <h5 class="card-title">hire-dedicated-developers</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in
-                                to
-                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text">Create your own team of developers for your software development
+                                project on short term, long term or permanent basis with guaranteed project delivery at
+                                affordable prices.</p>
                             <a href="btn service-btn">GET START</a>
                         </div>
 
@@ -317,7 +320,8 @@
                     <a href="" class="btn common-button "> Let's Discuss Your Ideas</a>
                 </div>
                 <div class="col-md-6">
-                    <img src="image/web-design-portfolio1.png" class="img-fluid" alt="">
+                    <img src="https://cdni.iconscout.com/illustration/premium/thumb/programming-company-1776260-1511835.png"
+                        class="img-fluid" alt="">
                 </div>
             </div>
             <div class="row ">
@@ -423,7 +427,8 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <img src="image/promise.jpg" class="img-fluid" alt="">
+                    <img src="https://cdni.iconscout.com/illustration/free/thumb/business-agreement-2043012-1730199.png"
+                        class="img-fluid" alt="">
                 </div>
             </div>
         </div>
@@ -442,8 +447,9 @@
                         <div class="row d-flex ">
                             <div class="col-2  "><i class="fas fa-quote-left"></i></div>
                             <div class="col-10 p-0 mt-3">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia architecto
-                                    explicabo nobis tempora blanditiis. Exercitationem </p>
+                                <p>Sarit393 was very easy to work with and he had lots of patience with me as I don’t
+                                    know a lot about websites. Great communication and he delivered exactly what I
+                                    requested. Will definitely use again for future projects! </p>
                             </div>
                         </div>
                     </div>
@@ -451,11 +457,11 @@
                         <div class="row">
                             <div class="col-8 d-flex align-items-end justify-content-end">
                                 <div class=" name">
-                                    <h2>Jone bornw</h2>
-                                    <p> CEO / webdesign company</p>
+                                    <h2>tedwards1021</h2>
+                                    <p> United States</p>
                                 </div>
                             </div>
-                            <div class="col-4"><img src="image/client-1.jpg" alt="" class="img-fluid" /></div>
+                            <div class="col-4"><img src="image/buyer-img/almonjer.jpg" alt="" class="img-fluid" /></div>
                         </div>
                     </div>
                 </div>
@@ -464,8 +470,8 @@
                         <div class="row d-flex ">
                             <div class="col-2  "><i class="fas fa-quote-left"></i></div>
                             <div class="col-10 p-0 mt-3">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia architecto
-                                    explicabo nobis tempora blanditiis. Exercitationem </p>
+                                <p>They helped us with full cooperation. True professionals. Also worked extra for my
+                                    special request. </p>
                             </div>
                         </div>
                     </div>
@@ -473,21 +479,70 @@
                         <div class="row">
                             <div class="col-8 d-flex align-items-end justify-content-end">
                                 <div class=" name">
-                                    <h2>Jone bornw</h2>
-                                    <p> CEO / webdesign company</p>
+                                    <h2>whiterose932</h2>
+                                    <p> India</p>
                                 </div>
                             </div>
-                            <div class="col-4"><img src="image/client-2.jpeg" alt="" class="img-fluid" /></div>
+                            <div class="col-4"><img src="image/buyer-img/avator.jpg" alt="" class="img-fluid" /></div>
                         </div>
                     </div>
                 </div>
+                   <div class="comment">
+                       <div class="comment-head">
+                           <div class="row d-flex ">
+                               <div class="col-2  "><i class="fas fa-quote-left"></i></div>
+                               <div class="col-10 p-0 mt-3">
+                                   <p>it was a great experience working with Sarit393. He delivered above and beyond and
+                                       before the expected time of delivery. He communicated very well, communication
+                                       line was always open. I used screenshots as an additional tool for illustrations
+                                       and communication, I will surely come back for more and will strongly recommend
+                                       him to anyone. </p>
+                               </div>
+                           </div>
+                       </div>
+                       <div class="comment-footer">
+                           <div class="row">
+                               <div class="col-8 d-flex align-items-end justify-content-end">
+                                   <div class=" name">
+                                       <h2>markgabriel</h2>
+                                       <p> Seychelles</p>
+                                   </div>
+                               </div>
+                               <div class="col-4"><img src="image/buyer-img/markgabriel.jpg" alt="" class="img-fluid" /></div>
+                           </div>
+                       </div>
+                   </div>
+                   <div class="comment">
+                       <div class="comment-head">
+                           <div class="row d-flex ">
+                               <div class="col-2  "><i class="fas fa-quote-left"></i></div>
+                               <div class="col-10 p-0 mt-3">
+                                   <p>Fantastic Seller! A+++ Did a great job, was a pleasure to communicate with and
+                                       delivered on time. Reliable and professional. </p>
+                               </div>
+                           </div>
+                       </div>
+                       <div class="comment-footer">
+                           <div class="row">
+                               <div class="col-8 d-flex align-items-end justify-content-end">
+                                   <div class=" name">
+                                       <h2>yanivbl</h2>
+                                       <p> Israel</p>
+                                   </div>
+                               </div>
+                               <div class="col-4"><img src="image/buyer-img/yanivbl.jpg" alt="" class="img-fluid" /></div>
+                           </div>
+                       </div>
+                   </div>
                 <div class="comment">
                     <div class="comment-head">
                         <div class="row d-flex ">
                             <div class="col-2  "><i class="fas fa-quote-left"></i></div>
                             <div class="col-10 p-0 mt-3">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia architecto
-                                    explicabo nobis tempora blanditiis. Exercitationem </p>
+                                <p>Seller was great to work with. Seller understood the requirements very well and went
+                                    above and beyond to accommodate all requests. I would highly encourage my contacts
+                                    to work with seller for website development related needs. Seller has a good and
+                                    knowledgeable team of developers. </p>
                             </div>
                         </div>
                     </div>
@@ -495,11 +550,12 @@
                         <div class="row">
                             <div class="col-8 d-flex align-items-end justify-content-end">
                                 <div class=" name">
-                                    <h2>Jone bornw</h2>
-                                    <p> CEO / webdesign company</p>
+                                    <h2>pragyagupta627</h2>
+                                    <p> India</p>
                                 </div>
                             </div>
-                            <div class="col-4"><img src="image/client-3.jpg" alt="" class="img-fluid" /></div>
+                            <div class="col-4"><img src="image/buyer-img/pragyagupta627.jpeg" alt=""
+                                    class="img-fluid" /></div>
                         </div>
                     </div>
                 </div>
@@ -511,8 +567,9 @@
                         <div class="row d-flex ">
                             <div class="col-2  "><i class="fas fa-quote-left"></i></div>
                             <div class="col-10 p-0 mt-3">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia architecto
-                                    explicabo nobis tempora blanditiis. Exercitationem </p>
+                                <p>Absolutely amazing people! Worked extremely hard and delivered my product in less
+                                    than 10 days! Other Freelancers tripled their price and half their efficiency. Just
+                                    a group of amazing and talented developers! </p>
                             </div>
                         </div>
                     </div>
@@ -520,11 +577,12 @@
                         <div class="row">
                             <div class="col-8 d-flex align-items-end justify-content-end">
                                 <div class=" name">
-                                    <h2>Jone bornw</h2>
-                                    <p> CEO / webdesign company</p>
+                                    <h2>
+                                        elzattursun</h2>
+                                    <p> United States</p>
                                 </div>
                             </div>
-                            <div class="col-4"><img src="image/client-4.jpg" alt="" class="img-fluid" /></div>
+                            <div class="col-4"><img src="image/buyer-img/Elzat Erken.webp" alt="" class="img-fluid" /></div>
                         </div>
                     </div>
                 </div>
@@ -534,8 +592,8 @@
                         <div class="row d-flex ">
                             <div class="col-2  "><i class="fas fa-quote-left"></i></div>
                             <div class="col-10 p-0 mt-3">
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia architecto
-                                    explicabo nobis tempora blanditiis. Exercitationem </p>
+                                <p>all the work was exactly as requested, this team even went out of the way to fix
+                                    issues, recommended! </p>
                             </div>
                         </div>
                     </div>
@@ -543,12 +601,12 @@
                         <div class="row">
                             <div class="col-8 d-flex align-items-end justify-content-end">
                                 <div class=" name">
-                                    <h2>Jone bornw</h2>
-                                    <p> CEO / webdesign company</p>
+                                    <h2>franknerd </h2>
+                                    <p> Pakistan</p>
                                 </div>
                             </div>
                             <div class="col-4">
-                                <img src="image/about us image.jpg" alt="">
+                                <img src="image/buyer-img/franknerd.jpg" alt="">
                             </div>
                         </div>
                     </div>
@@ -589,7 +647,8 @@
                     <a href="" class="btn d-block common-button mt-5"> Send</a>
                 </div>
                 <div class="col-md-5 mt-5">
-                    <img src="image/contact.svg" alt="" class="img-fluid">
+                    <img src="https://cdni.iconscout.com/illustration/premium/thumb/sign-contract-successful-2725340-2261054.png"
+                        alt="" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -602,13 +661,14 @@
                     <div class="col-md-4">
                         <a href="">
                             <div class="d-flex align-items-center">
-                                <img src="image/logo-bg.png" class="img-fluid" alt="sarlex">
+                                <img src="image/logo.png" class="img-fluid" alt="sarlex">
                                 <h2>SarLex Technologies</h2>
                             </div>
                         </a>
 
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam corporis doloribus
-                            voluptatem placeat reprehenderit ipsa ratione, veritatis perspiciatis! Ut, laboriosam!</p>
+                        <p>Commenced operations with a team of inspired developers, Sarlex Technologies Inc. is a
+                            startup IT firm We are dedicated to helping organizations convert creative ideas into
+                            tangible value by providing reliable software solutions</p>
                         <div class="footer-info">
                             <p> <i class="fas fa-location-arrow"></i><a href=""> Sylhet, 3000. Bangladesh</a></p>
 
