--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <a class="" href="pages/service.html">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="" href="pages/">Portfolio</a>
+                            <a class="" href="pages/portfolio.html">Portfolio</a>
                         </li>
                         <li class="nav-item">
                             <a class="" href="pages/">Profiles</a>
@@ -165,10 +165,9 @@
                         <img src="image/services-devops.svg" class="card-img-top" alt="sarlex">
                         <div class="card-body">
                             <h5 class="card-title">Software Development</h5>
-                            <p class="card-text">You need a UI/ UX designer to enhance your designing idea to your
-                                application developer. An UI/UX design help a web developer or a mobile app developer to
-                                work fast and properly. SarLex Technologies are not providing UI/ UX design service for
-                                next few months.</p>
+                            <p class="card-text">Software development is the process of conceiving, specifying,
+                                designing, programming, documenting, testing, and bug fixing involved in creating and
+                                maintaining applications, frameworks, or other software components.</p>
                             <a href="btn service-btn">GET START</a>
                         </div>
 
