--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <div class="container">
                 <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
                     <div class="col">
-                        <div class="p-3 tech-icon  "> <img src="image/html.png" alt="" class="img-fluid"></div>
+                        <div class="p-3 tech-icon  "> <img src="image/html1.png" alt="" class="img-fluid"></div>
                     </div>
                     <div class="col">
                         <div class="p-3 tech-icon  "> <img src="image/css3.png" alt="" class="img-fluid"></div>
@@ -252,6 +252,9 @@
                     </div>
                     <div class="col">
                         <div class="p-3 tech-icon  "> <img src="image/metarial ui.png" alt="" class="img-fluid"></div>
+                    </div>
+                    <div class="col">
+                        <div class="p-3 tech-icon  "> <img src="image/laravel.png" alt="" class="img-fluid"></div>
                     </div>
                     <div class="col">
                         <div class="p-3 tech-icon  "> <img src="image/nodejs.png" alt="" class="img-fluid"></div>
