--- a/pages/service.html
+++ b/pages/service.html
@@ -90,7 +90,8 @@
                         </div>
                     </div>
                     <div class="col-md-5">
-                        <img src="https://cdn3d.iconscout.com/3d/premium/thumb/404-3025721-2526919.png" alt="">
+                        <img src="https://cdn3d.iconscout.com/3d/premium/thumb/web-designing-4027284-3328602.png"
+                            alt="">
                     </div>
                 </div>
             </div>
